# todo_rust

./: Cargo.toml
data/: 2022_09_27.todo
src/: file_manager.rs  main.rs
